Fix copyright contrast

--- a/css/main.less
+++ b/css/main.less
@@ -174,7 +174,7 @@ footer {
   .copyright {
     text-align: center;
     font-size: 0.85em;
-    color: rgb(120, 120, 120);
+    color: @textColorMuted;
     margin-top: 20px;
   }
 
